--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
 
     <uses-permission android:name="android.permission.SEND_SMS"
         android:protectionLevel="dangerous" />
+    <uses-permission android:name="android.permission.write_external_storage"
+        android:protectionLevel="dangerous" />
+    <uses-permission android:name="android.permission.read_external_storage"
+        android:protectionLevel="dangerous" />
 
     <application
         android:allowBackup="true"
